--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
       </div>
     </footer>
     <script src="./main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   </body>
 </html>
